--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,265 @@
 /* CSS Document */
-*, *::after, *::before {
-  box-sizing:border-box;  
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
 }
 
+html {
+  display: block;
+  font-family: "DM Sans", sans-serif;
+  font-family: "Open Sans", sans-serif;
+}
+
+:root {
+  --slidernav: rgb(245, 245, 245);
+  --button-color1: black;
+  --button-color2: white;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+header {
+  position: relative;
+  align-items: center;
+}
+
+header a img {
+  margin: 0;
+  padding: 0.5em;
+  width: 4em;
+  height: auto;
+  position: absolute;
+  left: 1em;
+  top: 0;
+}
+
+header nav {
+  margin-top: 1em;
+  display: flex;
+  justify-content: flex-end;
+  gap: 2em;
+  margin-right: 1em;
+}
+
+header nav img {
+  display: flex;
+  width: 1.3em;
+}
+
+header nav img:hover {
+  background-color: rgb(245, 245, 245);
+  border-radius: 50%;
+}
+
+section:nth-of-type(1) {
+  margin-top: 0.5em;
+  background-color: var(--slidernav);
+  height: 3em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+section:nth-of-type(1) p {
+  margin: 0;
+  font-size: 10px;
+}
+
+section:nth-of-type(2) {
+  margin-left: 1em;
+}
+
+figure {
+  margin: 0 1em 0 0;
+  display: flex;
+  flex-direction: column;
+}
+
+figcaption {
+  margin-top: 0.5em;
+  order: 3;
+}
+
+figure h1 {
+  order: 2;
+  text-transform: uppercase;
+  margin: 0.5em 0 0 0;
+  font-weight: 800;
+  line-height: 1;
+  font-size: 37px;
+  letter-spacing: -3px;
+}
+
+figure img {
+  order: 1;
+}
+
+figcaption p {
+  font-size: 16px;
+  line-height: 1.5;
+  font-weight: 300;
+}
+
+figure figcaption div a {
+  padding: 0.5em 1.75em;
+  background-color: var(--button-color1);
+  font-weight: 100;
+  color: white;
+  border-radius: 20px;
+  text-decoration: none;
+  margin-top: 2em;
+  font-size: 16px;
+}
+
+div {
+  margin-top: 2em;
+}
+
+section:nth-of-type(3) {
+  margin: 5em 1em 1em 1em;
+}
+
+section:nth-of-type(3) ul {
+  display: flex;
+  overflow-x: auto;
+  scroll-snap-type: x mandatory;
+  scroll-snap-align: center;
+  overscroll-behavior: none;
+
+  gap: 0.5em;
+  padding: 0;
+}
+
+section:nth-of-type(3) li {
+  list-style: none;
+  margin: 0;
+  line-height: 1.5em;
+}
+
+section:nth-of-type(3) h2 {
+  margin: 0 0 1em 0;
+  font-size: 20px;
+  font-weight: 500;
+}
+
+section:nth-of-type(3) h4 {
+  margin: 0;
+  font-size: 18px;
+  font-weight: 400;
+}
+
+section:nth-of-type(3) h4 ~ p {
+  font-size: 16px;
+  font-weight: 200;
+}
+
+section:nth-of-type(3) img {
+  width: 20em;
+  margin: 0;
+}
+
+section:nth-of-type(3) p {
+  margin: 0;
+}
+
+section:nth-of-type(4) {
+  background-image: url(../images/nike.jpeg), url(../images/nike2.jpeg);
+  height: 65em;
+  margin-left: 1em;
+  margin-top: 8em;
+
+  background-size: 29em 29em;
+  background-position: 0 3em, 0 32.5em;
+  background-repeat: no-repeat;
+}
+
+section:nth-of-type(4) h2 {
+  font-weight: 500;
+}
+
+section:nth-of-type(5) {
+  margin: 5em 1em 1em 1em;
+}
+
+section:nth-of-type(5) h2 {
+  margin: 0;
+  font-weight: 500;
+}
+
+section:nth-of-type(5) ul {
+  display: flex;
+  overflow-x: auto;
+  scroll-snap-type: x mandatory;
+  scroll-snap-align: center;
+  overscroll-behavior: none;
+
+  gap: 0.5em;
+  padding: 0;
+}
+
+section:nth-of-type(5) li {
+  list-style: none;
+  margin: 0;
+  line-height: 1.5em;
+}
+
+section:nth-of-type(5) h4 {
+  margin: 0;
+  font-size: 18px;
+  font-weight: 400;
+}
+
+section:nth-of-type(5) h4 ~ p {
+  font-size: 16px;
+  font-weight: 200;
+}
+
+section:nth-of-type(5) img {
+  width: 20em;
+  margin: 0;
+}
+
+section:nth-of-type(5) p {
+  margin: 0;
+}
+
+footer {
+  background-color: black;
+  margin-top: 10em;
+  height: 40em;
+}
+
+footer section:nth-of-type(1) {
+  height: 10em;
+  background-color: black;
+  display: block;
+  position: relative;
+}
+
+footer ul {
+  justify-content: flex-start;
+  position: absolute;
+  top: 1em;
+  left: 1em;
+  padding: 0;
+}
+
+footer ul li {
+  list-style-type: none;
+  font-size: 14px;
+  color: white;
+  line-height: 2.3em;
+}
+
+hr {
+  color: white;
+  height: .1em;
+  width: 95%;
+  position: absolute;
+  top: 15em;
+  left: 1em;
+}
