--- a/styles/style.css
+++ b/styles/style.css
@@ -17,280 +17,577 @@ html {
   --button-color2: white;
 }
 
-body {
-  margin: 0;
-  padding: 0;
+@media (min-width: 26em) {
+  body {
+    margin: 0;
+    padding: 0;
+  }
+
+  header {
+    position: relative;
+    align-items: center;
+  }
+
+  header a > img {
+    margin: 0;
+    padding: 0 0 0.5em;
+    width: 4em;
+    height: auto;
+    position: absolute;
+    left: 1em;
+    top: 0;
+  }
+
+  header nav:nth-of-type(1) {
+    margin-top: 1em;
+    display: flex;
+    justify-content: flex-end;
+    gap: 2em;
+    margin-right: 1em;
+  }
+
+  header nav:nth-of-type(1) button {
+    position: relative;
+    width: 2.5em;
+    height: 2.5em;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 100;
+    border: none;
+    background-color: transparent;
+  }
+
+  header nav:nth-of-type(1) button span {
+    display: block;
+    width: 50%;
+    height: 1px;
+    background-color: black;
+
+    position: absolute;
+    transition: 0.3s;
+  }
+
+  header nav:nth-of-type(1) button span:nth-of-type(1) {
+    transform: translateY(-5px);
+  }
+
+  header nav:nth-of-type(1) button span:nth-of-type(3) {
+    transform: translateY(5px);
+  }
+
+  header.toonMenu nav:nth-of-type(2) {
+    transform: translateX(50%);
+    /* opacity: 0; */
+  }
+
+  header.toonMenu nav:nth-of-type(1) button span {
+    background-color: red;
+  }
+
+  header.toonMenu nav:nth-of-type(1) button span:nth-of-type(1) {
+    transform: rotate(45deg);
+  }
+
+  header.toonMenu nav:nth-of-type(1) button span:nth-of-type(2) {
+    opacity: 0;
+  }
+
+  header.toonMenu nav:nth-of-type(1) button span:nth-of-type(3) {
+    transform: rotate(-45deg);
+  }
+
+  header nav:nth-of-type(1) img {
+    display: flex;
+    width: 1.3em;
+  }
+
+  header nav:nth-of-type(2) {
+    overflow: scroll;
+    overscroll-behavior: contain;
+  }
+
+  header nav:nth-of-type(2) ul:nth-of-type(1) {
+    padding: 3em 2.5em 0;
+    list-style: none;
+  }
+
+  nav:nth-of-type(2) ul:nth-of-type(2) li:first-of-type {
+    background-image: url(../images/jordan-2.svg);
+    margin: 0;
+    height: 6em;
+    width: 13em;
+
+    background-size: 3em 3em;
+    background-position: 0 1em, 0 32.5em;
+    background-repeat: no-repeat;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  nav:nth-of-type(2) ul:nth-of-type(2) h4 {
+    font-weight: 500;
+  }
+
+  nav:nth-of-type(2) ul:nth-of-type(2) li:last-of-type {
+    background-image: url(../images/Converse.png);
+    margin: 0;
+    height: 6em;
+    width: 13em;
+
+    background-size: 3em 2em;
+    background-position: 0 2em, 0 32.5em;
+    background-repeat: no-repeat;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  header nav:nth-of-type(2) {
+    margin: 0;
+    padding: 0;
+    background: white;
+    list-style: none;
+
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+
+    transform: translatex(100%);
+    transition: 0.3s;
+
+    font-size: 15px;
+    line-height: 3em;
+    font-weight: 500;
+  }
+
+  section:nth-of-type(1) {
+    margin-top: 0.5em;
+    background-color: var(--slidernav);
+    height: 3em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  section:nth-of-type(1) p {
+    margin: 0;
+    font-size: 10px;
+  }
+
+  section:nth-of-type(2) {
+    margin-left: 1em;
+  }
+
+  figure {
+    margin: 0 1em 0 0;
+    display: flex;
+    flex-direction: column;
+  }
+
+  figcaption {
+    margin-top: 0.5em;
+    order: 3;
+  }
+
+  figure h1 {
+    order: 2;
+    text-transform: uppercase;
+    margin: 0.5em 0 0 0;
+    font-weight: 800;
+    line-height: 1;
+    font-size: 37px;
+    letter-spacing: -3px;
+  }
+
+  figure img {
+    order: 1;
+  }
+
+  figcaption p {
+    font-size: 16px;
+    line-height: 1.5;
+    font-weight: 300;
+  }
+
+  figure figcaption div a {
+    padding: 0.5em 1.75em;
+    background-color: var(--button-color1);
+    font-weight: 100;
+    color: white;
+    border-radius: 20px;
+    text-decoration: none;
+    margin-top: 2em;
+    font-size: 16px;
+  }
+
+  figure figcaption div a:hover {
+    background-color: rgb(84, 84, 151);
+  }
+
+  div {
+    margin-top: 2em;
+  }
+
+  section:nth-of-type(3) {
+    margin: 5em 1em 1em 1em;
+  }
+
+  section:nth-of-type(3) ul {
+    display: flex;
+    overflow-x: auto;
+    overflow-y: hidden;
+    scroll-snap-type: x mandatory;
+    scroll-snap-align: center;
+    overscroll-behavior: none;
+
+    gap: 0.5em;
+    padding: 0;
+  }
+
+  section:nth-of-type(3) li {
+    list-style: none;
+    margin: 0;
+    line-height: 1.5em;
+  }
+
+  section:nth-of-type(3) h2 {
+    margin: 0 0 1em 0;
+    font-size: 1.3rem;
+    font-weight: 500;
+  }
+
+  section:nth-of-type(3) h4 {
+    margin: 0;
+    font-size: 18px;
+    font-weight: 400;
+  }
+
+  section:nth-of-type(3) h4 ~ p {
+    font-size: 16px;
+    font-weight: 200;
+  }
+
+  section:nth-of-type(3) img {
+    width: 20em;
+    margin: 0;
+  }
+
+  section:nth-of-type(3) p {
+    margin: 0;
+  }
+
+  section:nth-of-type(4) {
+    background-image: url(../images/nike.jpeg);
+    height: 33em;
+    margin-left: 1em;
+    margin-top: 8em;
+
+    background-size: 29em 29em;
+    background-position: 0 3em, 0 32.5em;
+    background-repeat: no-repeat;
+  }
+
+  section:nth-of-type(4) h2 {
+    font-size: 1.3rem;
+    font-weight: 500;
+  }
+
+  section:nth-of-type(5) {
+    background-image: url(../images/nike2.jpeg);
+    height: 30em;
+    margin-left: 1em;
+
+    background-size: 29em 29em;
+    background-repeat: no-repeat;
+  }
+
+  section:nth-of-type(6) {
+    margin: 1.5em 1em 1em 1em;
+  }
+
+  section:nth-of-type(6) h2 {
+    margin: 0;
+    font-size: 1.3rem;
+    font-weight: 500;
+  }
+
+  section:nth-of-type(6) ul {
+    display: flex;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    scroll-snap-align: center;
+    overscroll-behavior: none;
+
+    gap: 0.5em;
+    padding: 0;
+  }
+
+  section:nth-of-type(6) li {
+    list-style: none;
+    margin: 0;
+    line-height: 1.5em;
+  }
+
+  section:nth-of-type(6) h4 {
+    margin: 0;
+    font-size: 18px;
+    font-weight: 400;
+  }
+
+  section:nth-of-type(6) h4 ~ p {
+    font-size: 16px;
+    font-weight: 200;
+  }
+
+  section:nth-of-type(6) img {
+    width: 20em;
+    margin: 0;
+  }
+
+  section:nth-of-type(6) p {
+    margin: 0;
+  }
+
+  footer {
+    background-color: black;
+    margin-top: 10em;
+    height: 60em;
+  }
+
+  footer section:nth-of-type(1) {
+    height: 10em;
+    background-color: black;
+    display: block;
+    position: relative;
+  }
+
+  footer section:nth-of-type(1) ul {
+    justify-content: flex-start;
+    position: absolute;
+    top: 1em;
+    padding: 0.5em;
+    margin: 1em;
+  }
+
+  footer section:nth-of-type(1) ul li {
+    list-style-type: none;
+    font-size: 14px;
+    color: white;
+    line-height: 2.3em;
+  }
+
+  hr {
+    color: white;
+    height: 0.125rem;
+    width: 95%;
+    position: absolute;
+    top: 15em;
+    left: 1em;
+  }
+
+  footer section:nth-of-type(2) {
+    position: relative;
+  }
+
+  footer section:nth-of-type(2) button {
+    display: block;
+    padding: 1em;
+    position: absolute;
+    top: 7.5em;
+    width: 100%;
+    color: white;
+    background-color: transparent;
+    border: none;
+    align-items: flex-start;
+    text-align: left;
+    text-transform: uppercase;
+    cursor: pointer;
+  }
+
+  footer section:nth-of-type(2) button:last-of-type {
+    display: block;
+    padding: 1em;
+    position: absolute;
+    top: 14em;
+    width: 100%;
+    color: white;
+    background-color: transparent;
+    border: none;
+    align-items: flex-start;
+    text-align: left;
+    text-transform: uppercase;
+    cursor: pointer;
+  }
+
+  footer section:nth-of-type(3) {
+    position: relative;
+  }
+
+  footer section:nth-of-type(3) ul {
+    margin-top: 20em;
+  }
+
+  footer section:nth-of-type(3) ul li {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 0.5em;
+    width: 3em;
+    height: 3em;
+    border-radius: 50%;
+    background-color: lightgray;
+  }
+
+  footer section:nth-of-type(3) ul li img {
+    width: 2em;
+    height: 2em;
+  }
+
+  footer section:nth-of-type(3) ul li:hover {
+    background-color: white;
+  }
+
+  footer section:last-of-type {
+    position: relative;
+  }
+
+  /* footer section:last-of-type ul{
+    justify-content: flex-start;
+    position: absolute;
+    top: 1em;
+    padding: 0.5em;
+    margin: 1em;
+    background-repeat: no-repeat;
+  }
+
+  footer section:last-of-type ul li {
+    list-style-type: none;
+    font-size: 14px;
+    color: white;
+    line-height: 3em;
+  } */
 }
 
-header {
-  position: relative;
-  align-items: center;
-}
+@media (min-width: 80em) {
 
-header a img {
-  margin: 0;
-  padding: .5em;
-  width: 4em;
-  height: auto;
-  position: absolute;
-  left: 1em;
-  top: 0;
-}
+  header a > img {
+    margin: 0;
+    padding: 0 0 0 .5rem;
+    width: 4em;
+    height: auto;
+    position: absolute;
+    left: 3em;
+    top: 0;
+  }
 
-header nav {
-  margin-top: 1em;
-  display: flex;
-  justify-content: flex-end;
-  gap: 2em;
-  margin-right: 1em;
-}
+  section:nth-of-type(3) {
+    margin: 5em 0 0 0;
+  }
 
-header nav img {
-  display: flex;
-  width: 1.3em;
-}
+  section:nth-of-type(3) ul {
+    display: flex;
+    overflow-x: auto;
+    overflow-y: hidden;
+    scroll-snap-type: x mandatory;
+    scroll-snap-align: center;
+    overscroll-behavior: none;
 
-header nav img:hover {
-  background-color: rgb(245, 245, 245);
-  border-radius: 50%;
-}
+    gap: 0.5em;
+    padding: 0 0 0 3.5rem;
+  }
 
-section:nth-of-type(1) {
-  margin-top: 0.5em;
-  background-color: var(--slidernav);
-  height: 3em;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+  section:nth-of-type(3) li {
+    list-style: none;
+    margin: 0;
+    line-height: 1.5em;
+  }
 
-section:nth-of-type(1) p {
-  margin: 0;
-  font-size: 10px;
-}
+  section:nth-of-type(3) h2 {
+    margin: 0 0 1em 0;
+    padding: 0 0 0 3.5rem;
+    font-size: 1.3rem;
+    font-weight: 500;
+  }
 
-section:nth-of-type(2) {
-  margin-left: 1em;
-}
+  section:nth-of-type(3) h4 {
+    margin: 0;
+    font-size: 18px;
+    font-weight: 400;
+  }
 
-figure {
-  margin: 0 1em 0 0;
-  display: flex;
-  flex-direction: column;
-}
+  section:nth-of-type(3) h4 ~ p {
+    font-size: 16px;
+    font-weight: 200;
+  }
 
-figcaption {
-  margin-top: 0.5em;
-  order: 3;
-}
+  section:nth-of-type(3) img {
+    width: 25em;
+    margin: 0;
+  }
 
-figure h1 {
-  order: 2;
-  text-transform: uppercase;
-  margin: 0.5em 0 0 0;
-  font-weight: 800;
-  line-height: 1;
-  font-size: 37px;
-  letter-spacing: -3px;
-}
+  section:nth-of-type(3) p {
+    margin: 0;
+  }
 
-figure img {
-  order: 1;
-}
-
-figcaption p {
-  font-size: 16px;
-  line-height: 1.5;
-  font-weight: 300;
-}
-
-figure figcaption div a {
-  padding: 0.5em 1.75em;
-  background-color: var(--button-color1);
-  font-weight: 100;
-  color: white;
-  border-radius: 20px;
-  text-decoration: none;
-  margin-top: 2em;
-  font-size: 16px;
-}
-
-div {
-  margin-top: 2em;
-}
-
-section:nth-of-type(3) {
-  margin: 5em 1em 1em 1em;
-}
-
-section:nth-of-type(3) ul {
-  display: flex;
-  overflow-x: auto;
-  scroll-snap-type: x mandatory;
-  scroll-snap-align: center;
-  overscroll-behavior: none;
-
-  gap: 0.5em;
-  padding: 0;
-}
-
-section:nth-of-type(3) li {
-  list-style: none;
-  margin: 0;
-  line-height: 1.5em;
-}
-
-section:nth-of-type(3) h2 {
-  margin: 0 0 1em 0;
-  font-size: 1.3rem;
-  font-weight: 500;
-}
-
-section:nth-of-type(3) h4 {
-  margin: 0;
-  font-size: 18px;
-  font-weight: 400;
-}
-
-section:nth-of-type(3) h4 ~ p {
-  font-size: 16px;
-  font-weight: 200;
-}
-
-section:nth-of-type(3) img {
-  width: 20em;
-  margin: 0;
-}
-
-section:nth-of-type(3) p {
-  margin: 0;
-}
-
-section:nth-of-type(4) {
-  background-image: url(../images/nike.jpeg);
-  height: 33em;
-  margin-left: 1em;
-  margin-top: 8em;
-
-  background-size: 29em 29em;
-  background-position: 0 3em, 0 32.5em;
-  background-repeat: no-repeat;
-}
-
-section:nth-of-type(4) h2 {
-  font-size: 1.3rem;
-  font-weight: 500;
-}
-
-section:nth-of-type(5) {
-  background-image: url(../images/nike2.jpeg);
-  height: 30em;
-  margin-left: 1em;
-
-  background-size: 29em 29em;
-  background-repeat: no-repeat;
-}
+  section:nth-of-type(4) h2 {
+    font-size: 1.3rem;
+    font-weight: 500;
+    padding: 0 0 0 3.5rem;;
+  }
 
 
-section:nth-of-type(6) {
-  margin: 1.5em 1em 1em 1em;
-}
+  section:nth-of-type(6) {
+    margin-top: 5em;
+  }
 
-section:nth-of-type(6) h2 {
-  margin: 0;
-  font-size: 1.3rem;
-  font-weight: 500;
-}
+  section:nth-of-type(6) h2 {
+    margin: 0;
+    padding: 0 0 0 3.5rem;
+    font-size: 1.3rem;
+    font-weight: 500;
+  }
 
-section:nth-of-type(6) ul {
-  display: flex;
-  overflow-x: auto;
-  scroll-snap-type: x mandatory;
-  scroll-snap-align: center;
-  overscroll-behavior: none;
+  section:nth-of-type(6) ul {
+    display: flex;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    scroll-snap-align: center;
+    overscroll-behavior: none;
 
-  gap: 0.5em;
-  padding: 0;
-}
+    gap: 0.5em;
+    padding: 0 0 0 3.5rem;
+  }
 
-section:nth-of-type(6) li {
-  list-style: none;
-  margin: 0;
-  line-height: 1.5em;
-}
+  section:nth-of-type(6) li {
+    list-style: none;
+    margin: 0;
+    line-height: 1.5em;
+  }
 
-section:nth-of-type(6) h4 {
-  margin: 0;
-  font-size: 18px;
-  font-weight: 400;
-}
+  section:nth-of-type(6) h4 {
+    margin: 0;
+    font-size: 18px;
+    font-weight: 400;
+  }
 
-section:nth-of-type(6) h4 ~ p {
-  font-size: 16px;
-  font-weight: 200;
-}
+  section:nth-of-type(6) h4 ~ p {
+    font-size: 16px;
+    font-weight: 200;
+  }
 
-section:nth-of-type(6) img {
-  width: 20em;
-  margin: 0;
-}
+  section:nth-of-type(6) img {
+    width: 25em;
+    margin: 0;
+  }
 
-section:nth-of-type(6) p {
-  margin: 0;
-}
+  section:nth-of-type(6) p {
+    margin: 0;
+  }
 
-footer {
-  background-color: black;
-  margin-top: 10em;
-  height: 40em;
-}
-
-footer section:nth-of-type(1) {
-  height: 10em;
-  background-color: black;
-  display: block;
-  position: relative;
-}
-
-footer ul {
-  justify-content: flex-start;
-  position: absolute;
-  top: 1em;
-  left: 1em;
-  padding: 0;
-}
-
-footer ul li {
-  list-style-type: none;
-  font-size: 14px;
-  color: white;
-  line-height: 2.3em;
-}
-
-hr {
-  color: white;
-  height: .125rem;
-  width: 95%;
-  position: absolute;
-  top: 15em;
-  left: 1em;
-}
-
-footer section:nth-of-type(2) {
-  position: relative;
-}
-
-footer section:nth-of-type(2) button{
-  display: block;
-  padding: 1em;
-  position: absolute;
-  top: 9em;
-  width: 100%;
-  color: white;
-  background-color: transparent;
-  border: none;
-  align-items: flex-start;
-  text-align: left;
-  text-transform: uppercase;
-  cursor: pointer;
 }
