--- a/styles/style.css
+++ b/styles/style.css
@@ -27,7 +27,7 @@ a:focus {
   border: solid 3px var(--button-hover);
 }
 
-@media (min-width: 26em) {
+@media (min-width: 20em) {
   body.home {
     margin: 0;
     padding: 0;
@@ -119,7 +119,7 @@ a:focus {
   }
 
   .home header.toonMenu nav:nth-of-type(2) {
-    transform: translateX(50%);
+    transform: translateX(100%);
     /* opacity: 0; */
   }
 
@@ -159,18 +159,18 @@ a:focus {
   }
 
   .home header nav:nth-of-type(2) ul:nth-of-type(1) {
-    padding: 1em 2.5em 0;
+    padding: 0 1.5em 0;
     list-style: none;
     line-height: 2.3em;
 
-    font-size: 1.2em;
+    font-size: 1.5em;
   }
 
   .home nav:nth-of-type(2) ul:nth-of-type(2) li:first-of-type {
     background-image: url(../images/jordan-2.svg);
     margin: 0;
     height: 2.9em;
-    width: 9em;
+    width: 10em;
 
     background-size: 2em 1.5em;
     background-position: 0 center;
@@ -183,6 +183,7 @@ a:focus {
 
   .home header nav:nth-of-type(2) ul:nth-of-type(2) {
     font-weight: 500;
+    padding: 0 1.5em 0;
   }
 
   .home header nav:nth-of-type(2) ul:nth-of-type(2) li:last-of-type {
@@ -212,7 +213,7 @@ a:focus {
     right: 0;
     bottom: 0;
 
-    transform: translatex(100%);
+    transform: translatex(0);
     transition: 0.3s;
 
     font-size: 15px;
@@ -221,45 +222,44 @@ a:focus {
   }
 
   .home header nav:nth-of-type(2) section {
-    width: 50%;
     margin-top: 2em;
-    padding: 0 2.5em 0;
-    line-height: 1.2em;
+    padding: 0 1.5em 0;
+    line-height: 2em;
   }
 
   .home header nav:nth-of-type(2) section p {
-    margin-bottom: 3em;
-    font-size: 1em;
+    margin-bottom: 2em;
+    font-size: 1.5em;
     color: rgb(139, 139, 139);
   }
 
   .home header nav:nth-of-type(2) section a:first-of-type {
-    padding: 0.6em 1.5em;
+    padding: .8em 2em;
     background-color: var(--button-color1);
     font-weight: 100;
     color: var(--font-wit);
     border-radius: 20px;
     text-decoration: none;
     margin-top: 2em;
-    font-size: 14px;
-    font-weight: 400;
+    font-size: 1em;
+    font-weight: 500;
   }
 
   .home header nav:nth-of-type(2) section a:last-of-type {
-    padding: 0.6em 1.5em;
+    padding: 0.8em 2em;
     background-color: var(--button-color2);
     font-weight: 100;
     color: var(--button-color1);
     border-radius: 20px;
     text-decoration: none;
     margin-top: 2em;
-    font-size: 14px;
-    font-weight: 400;
+    font-size: 1em;
+    font-weight: 500;
     border: solid 1px black;
   }
 
   .home header nav:nth-of-type(2) ul:nth-of-type(3) {
-    padding: 3em 2.5em 0;
+    padding: 3em 1.5em 0;
     list-style: none;
   }
 
@@ -327,11 +327,12 @@ a:focus {
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
   }
 
   .home main section:nth-of-type(1) p {
     margin: 0;
-    font-size: 10px;
+    font-size: 12px;
   }
 
 
@@ -506,7 +507,7 @@ a:focus {
     background-image: url(../images/nike.jpeg);
     height: 30em;
 
-    background-size: 100%;
+    background-size: 100% 30em;
     background-repeat: no-repeat;
   }
 
@@ -549,7 +550,7 @@ a:focus {
     background-image: url(../images/nike2.jpeg);
     height: 30em;
 
-    background-size: 100%;
+    background-size: 100% 30em;
     background-repeat: no-repeat;
     background-position: 0 0, 0 32.5em;
     list-style: none;
@@ -712,7 +713,7 @@ a:focus {
     background-image: url(../images/nikerun.jpeg);
     height: 30em;
 
-    background-size: 100%;
+    background-size: 100% 30em;
     background-repeat: no-repeat;
   }
 
@@ -880,12 +881,12 @@ a:focus {
 
   .home footer section:nth-of-type(2) {
     position: relative;
+    margin: 1em;
   }
 
   .home footer section:nth-of-type(2) button:nth-of-type(1) {
     display: block;
     padding: 0.5em;
-    margin: 1em;
     position: absolute;
     top: 7.5em;
     width: 95%;
@@ -906,7 +907,6 @@ a:focus {
   .home footer section:nth-of-type(2) button:nth-of-type(2) {
     display: block;
     padding: 0.5em;
-    margin: 1em;
     position: absolute;
     top: 14em;
     width: 95%;
