--- a/styles/style.css
+++ b/styles/style.css
@@ -119,7 +119,7 @@ a:focus {
   }
 
   .home header.toonMenu nav:nth-of-type(2) {
-    transform: translateX(100%);
+    transform: translateX(0%);
     /* opacity: 0; */
   }
 
@@ -213,7 +213,7 @@ a:focus {
     right: 0;
     bottom: 0;
 
-    transform: translatex(0);
+    transform: translatex(100%);
     transition: 0.3s;
 
     font-size: 15px;
@@ -787,7 +787,7 @@ a:focus {
     overflow-y: visible;
     scroll-snap-type: x mandatory;
     scroll-snap-align: center;
-    overscroll-behavior: none;
+    overscroll-behavior: contain auto;
 
     padding: 0;
     height: 27em;
