--- a/styles/style2.css
+++ b/styles/style2.css
@@ -28,7 +28,7 @@ a:focus {
 
 
 
-@media (min-width: 26em) {
+@media (min-width: 20em) {
     body.bestellingen {
         margin: 0;
         padding: 0;
@@ -113,7 +113,7 @@ a:focus {
       }
     
       .bestellingen header.toonMenu nav:nth-of-type(2) {
-        transform: translateX(50%);
+        transform: translateX(0%);
         /* opacity: 0; */
       }
     
@@ -139,7 +139,7 @@ a:focus {
         height: auto;
       }
     
-      /* NAV TWEE */
+      /* NAV HAMBURGER */
     
       .bestellingen header nav:nth-of-type(2) {
         overflow: scroll;
@@ -147,18 +147,18 @@ a:focus {
       }
     
       .bestellingen header nav:nth-of-type(2) ul:nth-of-type(1) {
-        padding: 1em 2.5em 0;
+        padding: 0 1.5em 0;
         list-style: none;
         line-height: 2.3em;
     
-        font-size: 1.2em;
+        font-size: 1.5em;
       }
     
       .bestellingen nav:nth-of-type(2) ul:nth-of-type(2) li:first-of-type {
         background-image: url(../images/jordan-2.svg);
         margin: 0;
         height: 2.9em;
-        width: 9em;
+        width: 10em;
     
         background-size: 2em 1.5em;
         background-position: 0 center;
@@ -169,8 +169,9 @@ a:focus {
         align-items: center;
       }
     
-      .bestellingen header nav:nth-of-type(2) ul:nth-of-type(2)  {
+      .bestellingen header nav:nth-of-type(2) ul:nth-of-type(2) {
         font-weight: 500;
+        padding: 0 1.5em 0;
       }
     
       .bestellingen header nav:nth-of-type(2) ul:nth-of-type(2) li:last-of-type {
@@ -187,6 +188,7 @@ a:focus {
         justify-content: center;
         align-items: center;
       }
+    
       .bestellingen header nav:nth-of-type(2) {
         margin: 0;
         padding: 0;
@@ -208,45 +210,44 @@ a:focus {
       }
     
       .bestellingen header nav:nth-of-type(2) section {
-        width: 50%;
         margin-top: 2em;
-        padding: 0 2.5em 0;
-        line-height: 1.2em;
+        padding: 0 1.5em 0;
+        line-height: 2em;
       }
     
       .bestellingen header nav:nth-of-type(2) section p {
-        margin-bottom: 3em;
-        font-size: 1em;
+        margin-bottom: 2em;
+        font-size: 1.5em;
         color: rgb(139, 139, 139);
       }
     
       .bestellingen header nav:nth-of-type(2) section a:first-of-type {
-        padding: 0.6em 1.5em;
+        padding: .8em 2em;
         background-color: var(--button-color1);
         font-weight: 100;
         color: var(--font-wit);
         border-radius: 20px;
         text-decoration: none;
         margin-top: 2em;
-        font-size: 14px;
-        font-weight: 400;
+        font-size: 1em;
+        font-weight: 500;
       }
     
       .bestellingen header nav:nth-of-type(2) section a:last-of-type {
-        padding: 0.6em 1.5em;
+        padding: 0.8em 2em;
         background-color: var(--button-color2);
         font-weight: 100;
         color: var(--button-color1);
         border-radius: 20px;
         text-decoration: none;
         margin-top: 2em;
-        font-size: 14px;
-        font-weight: 400;
+        font-size: 1em;
+        font-weight: 500;
         border: solid 1px black;
       }
     
       .bestellingen header nav:nth-of-type(2) ul:nth-of-type(3) {
-        padding: 3em 2.5em 0;
+        padding: 3em 1.5em 0;
         list-style: none;
       }
     
@@ -407,12 +408,12 @@ a:focus {
     
       .bestellingen footer section:nth-of-type(2) {
         position: relative;
+        margin: 1em;
       }
     
       .bestellingen footer section:nth-of-type(2) button:nth-of-type(1) {
         display: block;
         padding: 0.5em;
-        margin: 1em;
         position: absolute;
         top: 7.5em;
         width: 95%;
@@ -433,7 +434,6 @@ a:focus {
       .bestellingen footer section:nth-of-type(2) button:nth-of-type(2) {
         display: block;
         padding: 0.5em;
-        margin: 1em;
         position: absolute;
         top: 14em;
         width: 95%;
