--- a/styles/style2.css
+++ b/styles/style2.css
@@ -351,6 +351,17 @@ a:focus {
         height: 4em;
         border: none;
         border-radius: 5em;
+
+        background-image: linear-gradient(90deg,
+                var(--slidernav) 50%,
+                var(--button-hover) 50%);
+        background-size: 200% 100%;
+        transition: 0.3s;
+        outline: none;
+    }
+
+    .bestellingen section form button:hover {
+        background-position: right center;
     }
 
     .bestellingen main form p:nth-of-type(2) {
@@ -559,282 +570,14 @@ a:focus {
 
 
 @media (min-width: 64em) {
-    .bestellingen header a > svg {
-      margin: 0;
-      padding: 0 0 0 0.5rem;
-      width: 4em;
-      height: auto;
-      position: absolute;
-      left: 2em;
-      top: 4em;
-      z-index: 150;
-    }
-  
-    .bestellingen header a > svg:hover {
-      fill: var(--button-hover);
-    }
-  
-    .bestellingen header nav:nth-of-type(1) {
-      display: none;
-    }
-  
-    .bestellingen header nav:nth-of-type(2) {
-      display: none;
-    }
-  
-    /* DERDE NAV */
-  
-    .bestellingen header nav:nth-of-type(3) {
-      display: block;
-      height: 2.5em;
-      width: 100%;
-      background-color: var(--slidernav);
-  
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-    }
-  
-    .bestellingen header nav:nth-of-type(3) ul:nth-of-type(1) {
-      display: flex;
-      list-style: none;
-      margin-left: 3em;
-      padding: 0;
-      gap: 1em;
-      align-items: center;
-    }
-  
-    .bestellingen header nav:nth-of-type(3) ul:nth-of-type(2) {
-      display: flex;
-      list-style: none;
-      gap: 1em;
-      font-size: 13px;
-      margin-right: 3em;
-      padding: 0;
-    }
-  
-    .bestellingen header nav:nth-of-type(3) img {
-      width: 1.5em;
-      height: auto;
-      justify-content: flex-start;
-    }
-  
-    /* 4e NAV */
-  
-    .bestellingen header nav:nth-of-type(4) {
-      position: relative;
-      padding: 1em 0;
-      margin: 0 3em;
-  
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-  
-    .bestellingen header nav:nth-of-type(4) ul {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-      display: flex;
-      gap: 2em;
-      font-size: 14px;
-    }
-  
-    .bestellingen header nav:nth-of-type(4) ul li a {
-      display: block;
-      position: relative;
-      padding: 0.2em 0;
-    }
-  
-    .bestellingen header nav:nth-of-type(4) li a::after {
-      content: "";
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      height: 0.1em;
-      background-color: var(--button-hover);
-      opacity: 0;
-      transition: opacity 300ms, transform 300ms;
-    }
-  
-    .bestellingen header nav:nth-of-type(4) li a::after {
-      opacity: 1;
-      transform: scale(0);
-      transform-origin: center;
-    }
-  
-    .bestellingen header nav:nth-of-type(4) li a:hover::after,
-    .bestellingen header nav:nth-of-type(4) li a:focus::after {
-      transform: scale(1);
-    }
-  
-    /* BRON: https://css-irl.info/animating-underlines/ */
-  
-    .bestellingen header nav:nth-of-type(4) ul:nth-of-type(2) {
-      position: absolute;
-      right: 0;
-      align-items: center;
-    }
-  
-    .bestellingen header nav:nth-of-type(4) ul:nth-of-type(2) img {
-      width: 1.5em;
-      height: auto;
-    }
-  
-    .bestellingen header nav:nth-of-type(4) input {
-      height: 3em;
-      width: 12em;
-  
-      border-radius: 5em;
-      border: none;
-      background-color: var(--slidernav);
-      background-image: url(../images/zoeken.svg);
-  
-      background-repeat: no-repeat;
-      background-size: 1.5em auto;
-      background-position: 0.5em center;
-  
-      padding-left: 2.5em;
-      position: absolute;
-      right: 8em;
-    }
-
-
-    .bestellingen footer section:nth-of-type(1) {
-        display: none;
-      }
-    
-      .bestellingen footer section:nth-of-type(2) {
-        display: none;
-      }
-    
-      .bestellingen footer section:nth-of-type(3) {
-        display: none;
-      }
-    
-      .bestellingen footer section:nth-of-type(4) {
-        display: none;
-      }
-    
-      /* FOOTER DESKTOP */
-      .bestellingen footer {
-        height: 22em;
-        margin-top: 10em;
-      }
-
-
-      .bestellingen footer section:nth-of-type(5) {
-        margin: 0 3em;
-        padding: 2.5em 0 0 0;
-        display: flex;
-        gap: 3em;
-    
-        position: relative;
-      }
-    
-      .bestellingen footer section:nth-of-type(5) ul {
-        padding: 0;
-        list-style: none;
-        line-height: 2em;
-        margin: 0;
-      }
-    
-      .bestellingen footer section:nth-of-type(5) ul:nth-of-type(1) li a {
-        font-size: 12px;
-        font-weight: 500;
-        text-transform: uppercase;
-      }
-    
-      .bestellingen footer section:nth-of-type(5) ul:nth-of-type(2) li a {
-        font-size: 12px;
-        font-weight: 100;
-        color: var(--font-footer);
-      }
-    
-      .bestellingen footer section:nth-of-type(5) ul:nth-of-type(3) li a {
-        font-size: 12px;
-        font-weight: 100;
-        color: var(--font-footer);
-      }
-    
-      .bestellingen footer section:nth-of-type(5) ul:nth-of-type(2) li {
-        font-size: 14px;
-        font-weight: 500;
-        color: var(--font-wit);
-      }
-    
-      .bestellingen footer section:nth-of-type(5) ul:nth-of-type(3) li {
-        font-size: 14px;
-        font-weight: 500;
-        color: var(--font-wit);
-      }
-    
-      .bestellingen footer section:nth-of-type(5) ul:nth-of-type(4) li a img {
-        width: 1.3em;
-        height: 1.3em;
-      }
-    
-      .bestellingen footer section:nth-of-type(5) ul:nth-of-type(4) {
-        display: flex;
-        gap: 0.5em;
-        margin: 0;
-    
-        position: absolute;
-        top: 2.5em;
-        right: 0;
-      }
-    
-      .bestellingen footer section:nth-of-type(5) ul:nth-of-type(4) li {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 2.7em;
-        height: 2.7em;
-        border-radius: 50%;
-        background-color: lightgray;
-      }
-
-      .bestellingen footer section:nth-of-type(5) ul li a {
-        display: flex;
-    }
-    
-      .bestellingen footer section:nth-of-type(6) {
-        margin: 0 3em;
-        display: flex;
-        justify-content: flex-end;
-      }
-    
-      .bestellingen footer section:nth-of-type(6) ul {
-        display: flex;
-        gap: 1em;
-      }
-    
-      .bestellingen footer section:nth-of-type(6) ul li a {
-        font-size: 10px;
-        color: var(--font-footer);
-      }
-
-
-}
-
-
-
-
-
-
-
-@media (min-width: 120em) {
-    /* Bestellingen */
-
     .bestellingen header a>svg {
         margin: 0;
         padding: 0 0 0 0.5rem;
         width: 4em;
         height: auto;
         position: absolute;
-        left: 15em;
-        top: 3.4em;
+        left: 2em;
+        top: 4em;
         z-index: 150;
     }
 
@@ -842,7 +585,6 @@ a:focus {
         fill: var(--button-hover);
     }
 
-
     .bestellingen header nav:nth-of-type(1) {
         display: none;
     }
@@ -851,6 +593,7 @@ a:focus {
         display: none;
     }
 
+    /* DERDE NAV */
 
     .bestellingen header nav:nth-of-type(3) {
         display: block;
@@ -866,19 +609,18 @@ a:focus {
     .bestellingen header nav:nth-of-type(3) ul:nth-of-type(1) {
         display: flex;
         list-style: none;
-        margin-left: 15em;
+        margin-left: 3em;
         padding: 0;
         gap: 1em;
         align-items: center;
     }
-
 
     .bestellingen header nav:nth-of-type(3) ul:nth-of-type(2) {
         display: flex;
         list-style: none;
         gap: 1em;
         font-size: 13px;
-        margin-right: 18em;
+        margin-right: 3em;
         padding: 0;
     }
 
@@ -888,18 +630,16 @@ a:focus {
         justify-content: flex-start;
     }
 
-
     /* 4e NAV */
 
     .bestellingen header nav:nth-of-type(4) {
         position: relative;
         padding: 1em 0;
-        margin: 0 15em;
+        margin: 0 3em;
 
         display: flex;
         align-items: center;
         justify-content: center;
-
     }
 
     .bestellingen header nav:nth-of-type(4) ul {
@@ -917,8 +657,8 @@ a:focus {
         padding: 0.2em 0;
     }
 
-    .bestellingen header nav:nth-of-type(4) ul li a::after {
-        content: '';
+    .bestellingen header nav:nth-of-type(4) li a::after {
+        content: "";
         position: absolute;
         bottom: 0;
         left: 0;
@@ -929,14 +669,14 @@ a:focus {
         transition: opacity 300ms, transform 300ms;
     }
 
-    .bestellingen header nav:nth-of-type(4) ul li a::after {
+    .bestellingen header nav:nth-of-type(4) li a::after {
         opacity: 1;
         transform: scale(0);
         transform-origin: center;
     }
 
-    .bestellingen header nav:nth-of-type(4) ul li a:hover::after,
-    .bestellingen header nav:nth-of-type(4) ul li a:focus::after {
+    .bestellingen header nav:nth-of-type(4) li a:hover::after,
+    .bestellingen header nav:nth-of-type(4) li a:focus::after {
         transform: scale(1);
     }
 
@@ -946,7 +686,6 @@ a:focus {
         position: absolute;
         right: 0;
         align-items: center;
-
     }
 
     .bestellingen header nav:nth-of-type(4) ul:nth-of-type(2) img {
@@ -965,7 +704,7 @@ a:focus {
 
         background-repeat: no-repeat;
         background-size: 1.5em auto;
-        background-position: .5em center;
+        background-position: 0.5em center;
 
         padding-left: 2.5em;
         position: absolute;
@@ -973,42 +712,229 @@ a:focus {
     }
 
 
+    .bestellingen footer section:nth-of-type(1) {
+        display: none;
+    }
+
+    .bestellingen footer section:nth-of-type(2) {
+        display: none;
+    }
+
+    .bestellingen footer section:nth-of-type(3) {
+        display: none;
+    }
+
+    .bestellingen footer section:nth-of-type(4) {
+        display: none;
+    }
+
+    /* FOOTER DESKTOP */
+    .bestellingen footer {
+        height: 22em;
+        margin-top: 10em;
+    }
 
 
-/* FOOTER DESKTOP */
+    .bestellingen footer section:nth-of-type(5) {
+        margin: 0 3em;
+        padding: 2.5em 0 0 0;
+        display: flex;
+        gap: 3em;
+
+        position: relative;
+    }
+
+    .bestellingen footer section:nth-of-type(5) ul {
+        padding: 0;
+        list-style: none;
+        line-height: 2em;
+        margin: 0;
+    }
+
+    .bestellingen footer section:nth-of-type(5) ul:nth-of-type(1) li a {
+        font-size: 12px;
+        font-weight: 500;
+        text-transform: uppercase;
+    }
+
+    .bestellingen footer section:nth-of-type(5) ul:nth-of-type(2) li a {
+        font-size: 12px;
+        font-weight: 100;
+        color: var(--font-footer);
+    }
+
+    .bestellingen footer section:nth-of-type(5) ul:nth-of-type(3) li a {
+        font-size: 12px;
+        font-weight: 100;
+        color: var(--font-footer);
+    }
+
+    .bestellingen footer section:nth-of-type(5) ul:nth-of-type(2) li {
+        font-size: 14px;
+        font-weight: 500;
+        color: var(--font-wit);
+    }
+
+    .bestellingen footer section:nth-of-type(5) ul:nth-of-type(3) li {
+        font-size: 14px;
+        font-weight: 500;
+        color: var(--font-wit);
+    }
+
+    .bestellingen footer section:nth-of-type(5) ul:nth-of-type(4) li a img {
+        width: 1.3em;
+        height: 1.3em;
+    }
+
+    .bestellingen footer section:nth-of-type(5) ul:nth-of-type(4) {
+        display: flex;
+        gap: 0.5em;
+        margin: 0;
+
+        position: absolute;
+        top: 2.5em;
+        right: 0;
+    }
+
+    .bestellingen footer section:nth-of-type(5) ul:nth-of-type(4) li {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 2.7em;
+        height: 2.7em;
+        border-radius: 50%;
+        background-color: lightgray;
+    }
+
+    .bestellingen footer section:nth-of-type(5) ul li a {
+        display: flex;
+    }
+
+    .bestellingen footer section:nth-of-type(6) {
+        margin: 0 3em;
+        display: flex;
+        justify-content: flex-end;
+    }
+
+    .bestellingen footer section:nth-of-type(6) ul {
+        display: flex;
+        gap: 1em;
+    }
+
+    .bestellingen footer section:nth-of-type(6) ul li a {
+        font-size: 10px;
+        color: var(--font-footer);
+    }
 
 
-.bestellingen footer section:nth-of-type(1) {
-    display: none;
-  }
-
-  .bestellingen footer section:nth-of-type(2) {
-    display: none;
-  }
-
-  .bestellingen footer section:nth-of-type(3) {
-    display: none;
-  }
-
-  .bestellingen footer section:nth-of-type(4) {
-    display: none;
-  }
+}
 
 
-  .bestellingen footer {
-    height: 22em;
-  }
-
-  .bestellingen footer section:nth-of-type(5) {
-    margin: 0 20em;
-    padding: 2.5em 2.5em 0 2.5em;
-  }
 
 
-  .bestellingen footer section:nth-of-type(6) {
-    margin: 0 20em;
-    display: flex;
-    justify-content: flex-end;
-  }
+
+
+
+@media (min-width: 120em) {
+    /* Bestellingen */
+
+    .bestelligen header a>svg {
+        margin: 0;
+        padding: 0 0 0 0.5rem;
+        width: 4em;
+        height: auto;
+        position: absolute;
+        left: 15em;
+        top: 3.7em;
+        z-index: 150;
+    }
+
+    .bestellingen header a>svg:hover {
+        fill: var(--button-hover);
+    }
+
+    .bestellingen header nav:nth-of-type(1) {
+        display: none;
+    }
+
+    .bestellingen header nav:nth-of-type(2) {
+        display: none;
+    }
+
+
+
+
+    /* DERDE NAV */
+
+    .bestellingen header nav:nth-of-type(3) ul:nth-of-type(1) {
+        display: flex;
+        list-style: none;
+        margin-left: 15em;
+        padding: 0;
+        gap: 1em;
+        align-items: center;
+    }
+
+    .bestellingen header nav:nth-of-type(3) ul:nth-of-type(2) {
+        display: flex;
+        list-style: none;
+        gap: 1em;
+        font-size: 13px;
+        margin-right: 18em;
+        padding: 0;
+    }
+
+
+
+
+    /* 4e NAV */
+
+    .bestellingen header nav:nth-of-type(4) {
+        position: relative;
+        padding: 1em 0;
+        margin: 0 15em;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+
+
+    /* FOOTER DESKTOP */
+
+
+    .bestellingen footer section:nth-of-type(1) {
+        display: none;
+    }
+
+    .bestellingen footer section:nth-of-type(2) {
+        display: none;
+    }
+
+    .bestellingen footer section:nth-of-type(3) {
+        display: none;
+    }
+
+    .bestellingen footer section:nth-of-type(4) {
+        display: none;
+    }
+
+
+    .bestellingen footer {
+        height: 22em;
+    }
+
+    .bestellingen footer section:nth-of-type(5) {
+        margin: 0 20em;
+        padding: 2.5em 2.5em 0 2.5em;
+    }
+
+
+    .bestellingen footer section:nth-of-type(6) {
+        margin: 0 20em;
+        display: flex;
+        justify-content: flex-end;
+    }
 
 }
